@startuml
'https://plantuml.com/class-diagram

abstract class PC{
    # String Mainboard, CPU, RAM, Storage, Screen
    # int vMainboard, vCPU, vRAM, vStorage, vScreen
    + {abstract} build();
    +{abstract} value();
}
class ConcretePC
abstract class PCDecorator
class UpgradeRam
class UpgradeScreen
PC<|--ConcretePC
PC<--PCDecorator
PCDecorator-->PC:pc
PCDecorator<-- UpgradeRam
PCDecorator<-- UpgradeScreen
@enduml